--- a/c06/crew.html
+++ b/c06/crew.html
@@ -14,7 +14,7 @@
   <script src="index.js" defer></script>
 </head>
 
-<body class="destination">
+<body class="crew">
 
   <a href="#main" class="skip-to-content">Skip to content</a>
 
@@ -44,10 +44,12 @@
       <button aria-selected="false"><span class="sr-only">The crew engineer</span></button>
     </div>
 
-    <article class="crew-info">
-      <h2 class="fs-600 ff-serif uppercase">Commander</h2>
-      <p class="fs-700 ff-serif uppercase">Douglas Hurley</p>
-      <p>Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.
+    <article class="crew-info flow">
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">Commander</h2>
+        <p class="fs-700 ff-serif uppercase">Douglas Hurley</p>
+      </div>
+      <p class="text-accent">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.
       </p>
     </article>
 
