--- a/c06/destination.html
+++ b/c06/destination.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style.css">
 
   <script src="index.js" defer></script>
+  <script src="tabs.js"></script>
 </head>
 
 <body class="destination">
@@ -38,16 +39,32 @@
     <!-- <div> -->
     <h1 class="numbered-title"><span aria-hidden="true">01</span>Pick your destination</h1>
 
-    <img src="./starter-code/assets/destination/image-moon.png" alt="the moon">
+    <picture>
+      <source sourceset="./starter-code/assets/destination/image-moon.webp" type="image/webp">
+      <img src="./starter-code/assets/destination/image-moon.png" alt="the Moon">
+    </picture>
+    <picture hidden>
+      <source sourceset="./starter-code/assets/destination/image-mars.png" type="image/webp">
+      <img src="./starter-code/assets/destination/image-mars.png" alt="Mars">
+    </picture>
+    <picture hidden>
+      <source sourceset="./starter-code/assets/destination/image-europa.webp" type="image/webp">
+      <img src="./starter-code/assets/destination/image-europa.png" alt="Europa">
+    </picture>
+    <picture hidden>
+      <source sourceset="./starter-code/assets/destination/image-titan.webp" type="image/webp">
+      <img src="./starter-code/assets/destination/image-titan.png" alt="Titan">
+    </picture>
     <!-- </div> -->
 
-    <div class="tab-list underline-indicators flex">
-      <button aria-selected="true" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Moon</button>
-      <button aria-selected="false" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Mars</button>
-      <button aria-selected="false" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Europa</button>
-      <button aria-selected="false" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Titan</button>
+    <div role="tablist" class="tab-list underline-indicators flex">
+      <button aria-selected="true" role="tab" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Moon</button>
+      <button aria-selected="false" role="tab" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Mars</button>
+      <button aria-selected="false" role="tab" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Europa</button>
+      <button aria-selected="false" role="tab" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Titan</button>
     </div>
 
+    <!-- Moon -->
     <article class="destination-info flow">
       <h2 class="fs-800 uppercase ff-serif">Moon</h2>
       <p class="text-accent">See our planet as you’ve never seen it before. A perfect relaxing trip away to help zregain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
@@ -60,6 +77,62 @@
         <div>
           <h3 class="text-accent ff-sans-cond fs-300 uppercase">Est. travel time</h3>
           <p class="fs-500 ff-serif uppercase">3 days</p>
+        </div>
+      </div>
+    </article>
+
+    <!-- Mars -->
+    <article class="destination-info flow" hidden>
+      <h2 class="fs-800 uppercase ff-serif">Mars</h2>
+      <p class="text-accent">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
+
+      <div class="flex">
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">225 mil. km</p>
+        </div>
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">9 months</p>
+        </div>
+      </div>
+    </article>
+
+    <!-- Europa -->
+    <article class="destination-info flow" hidden>
+      <h2 class="fs-800 uppercase ff-serif">Europa</h2>
+      <p class="text-accent">The smallest of the four Galilean moons orbiting Jupiter, Europa is a
+        winter lover’s dream. With an icy surface, it’s perfect for a bit of
+        ice skating, curling, hockey, or simple relaxation in your snug
+        wintery cabin.</p>
+
+      <div class="flex">
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">628 mil. km</p>
+        </div>
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">3 years</p>
+        </div>
+      </div>
+    </article>
+
+    <!-- Titan -->
+    <article class="destination-info flow" hidden>
+      <h2 class="fs-800 uppercase ff-serif">Moon</h2>
+      <p class="text-accent">The only moon known to have a dense atmosphere other than Earth, Titan
+        is a home away from home (just a few hundred degrees colder!). As a
+        bonus, you get striking views of the Rings of Saturn.</p>
+
+      <div class="flex">
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">1.6 bil. km</p>
+        </div>
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">7 years</p>
         </div>
       </div>
     </article>
