--- a/c06/destination.html
+++ b/c06/destination.html
@@ -40,19 +40,19 @@
     <h1 class="numbered-title"><span aria-hidden="true">01</span>Pick your destination</h1>
 
     <picture>
-      <source sourceset="./starter-code/assets/destination/image-moon.webp" type="image/webp">
+      <!-- <source sourceset="./starter-code/assets/destination/image-moon.webp" type="image/webp"> -->
       <img src="./starter-code/assets/destination/image-moon.png" alt="the Moon">
     </picture>
     <picture hidden>
-      <source sourceset="./starter-code/assets/destination/image-mars.png" type="image/webp">
+      <!-- <source sourceset="./starter-code/assets/destination/image-mars.png" type="image/webp"> -->
       <img src="./starter-code/assets/destination/image-mars.png" alt="Mars">
     </picture>
     <picture hidden>
-      <source sourceset="./starter-code/assets/destination/image-europa.webp" type="image/webp">
+      <!-- <source sourceset="./starter-code/assets/destination/image-europa.webp" type="image/webp"> -->
       <img src="./starter-code/assets/destination/image-europa.png" alt="Europa">
     </picture>
     <picture hidden>
-      <source sourceset="./starter-code/assets/destination/image-titan.webp" type="image/webp">
+      <!-- <source sourceset="./starter-code/assets/destination/image-titan.webp" type="image/webp"> -->
       <img src="./starter-code/assets/destination/image-titan.png" alt="Titan">
     </picture>
     <!-- </div> -->
@@ -65,7 +65,7 @@
     </div>
 
     <!-- Moon -->
-    <article class="destination-info flow" id="moon-tab">
+    <article class="destination-info flow" id="moon-tab" role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Moon</h2>
       <p class="text-accent">See our planet as you’ve never seen it before. A perfect relaxing trip away to help zregain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
 
@@ -82,7 +82,7 @@
     </article>
 
     <!-- Mars -->
-    <article class="destination-info flow" id="mars-tab" hidden>
+    <article class="destination-info flow" id="mars-tab" hidden role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Mars</h2>
       <p class="text-accent">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
 
@@ -99,7 +99,7 @@
     </article>
 
     <!-- Europa -->
-    <article class="destination-info flow" id="europa-tab" hidden>
+    <article class="destination-info flow" id="europa-tab" hidden role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Europa</h2>
       <p class="text-accent">The smallest of the four Galilean moons orbiting Jupiter, Europa is a
         winter lover’s dream. With an icy surface, it’s perfect for a bit of
@@ -119,7 +119,7 @@
     </article>
 
     <!-- Titan -->
-    <article class="destination-info flow" id="titan-tab" hidden>
+    <article class="destination-info flow" id="titan-tab" hidden role="tabpanel">
       <h2 class="fs-800 uppercase ff-serif">Titan</h2>
       <p class="text-accent">The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
 
