--- a/c06/crew.html
+++ b/c06/crew.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style.css">
 
   <script src="index.js" defer></script>
+  <script src="tabs.js" defer></script>
 </head>
 
 <body class="crew">
@@ -37,14 +38,14 @@
   <main id="main" class="grid-container grid-container--crew flow">
     <h1 class="numbered-title"><span aria-hidden="true">02</span>Meet your crew</h1>
 
-    <div class="dot-indicators flex">
-      <button aria-selected="true"><span class="sr-only">The commander</span></button>
-      <button aria-selected="false"><span class="sr-only">The mission specialist</span></button>
-      <button aria-selected="false"><span class="sr-only">The pilot</span></button>
-      <button aria-selected="false"><span class="sr-only">The crew engineer</span></button>
+    <div class="dot-indicators flex tab-list">
+      <button aria-selected="true" role="tab" tabindex="0" data-image="commander-image" aria-controls="commander-tab"><span class="sr-only">The commander</span></button>
+      <button aria-selected="false" role="tab" tabindex="-1" data-image="ms-image" aria-controls="ms-tab"><span class="sr-only">The mission specialist</span></button>
+      <button aria-selected="false" role="tab" tabindex="-1" data-image="pilot-image" aria-controls="pilot-tab"><span class="sr-only">The pilot</span></button>
+      <button aria-selected="false" role="tab" tabindex="-1" data-image="engineer-image" aria-controls="engineer-tab"><span class="sr-only">The crew engineer</span></button>
     </div>
 
-    <article class="crew-info flow">
+    <article class="crew-info flow" role="tabpanel" id="commander-tab">
       <div class="flow" style="--flow-space:.5rem;">
         <h2 class="fs-600 ff-serif uppercase">Commander</h2>
         <p class="fs-700 ff-serif uppercase">Douglas Hurley</p>
@@ -53,7 +54,58 @@
       </p>
     </article>
 
-    <img src="./starter-code/assets/crew/image-douglas-hurley.png" alt="Commander Douglas Hurley">
+    <article class="crew-info flow" role="tabpanel" id="ms-tab" hidden>
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">Mission Specialist</h2>
+        <p class="fs-700 ff-serif uppercase">Mark Shuttleworth
+        </p>
+      </div>
+      <p class="text-accent">
+        Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind
+        the Linux-based Ubuntu operating system. Shuttleworth became the first South
+        African to travel to space as a space tourist.
+      </p>
+    </article>
+
+    <article class="crew-info flow" role="tabpanel" id="pilot-tab" hidden>
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">Pilot</h2>
+        <p class="fs-700 ff-serif uppercase">Victor Glover</p>
+      </div>
+      <p class="text-accent">Pilot on the first operational flight of the SpaceX Crew Dragon to the
+        International Space Station. Glover is a commander in the U.S. Navy where
+        he pilots an F/A-18.He was a crew member of Expedition 64, and served as a
+        station systems flight engineer.
+      </p>
+    </article>
+
+    <article class="crew-info flow" role="tabpanel" id="engineer-tab" hidden>
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">Flight Engineer</h2>
+        <p class="fs-700 ff-serif uppercase">Anousheh Ansari</p>
+      </div>
+      <p class="text-accent">Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems.
+        Ansari was the fourth self-funded space tourist, the first self-funded woman to
+        fly to the ISS, and the first Iranian in space.
+      </p>
+    </article>
+
+    <picture id="commander-image">
+      <img src="./starter-code/assets/crew/image-douglas-hurley.png" alt="Commander Douglas Hurley">
+    </picture>
+
+    <picture id="ms-image" hidden>
+      <img src="./starter-code/assets/crew/image-mark-shuttleworth.png" alt="Mark Shuttleworth">
+    </picture>
+
+    <picture id="pilot-image" hidden>
+      <img src="./starter-code/assets/crew/image-victor-glover.png" alt="Victor Glover">
+    </picture>
+
+    <picture id="engineer-image" hidden>
+      <img src="./starter-code/assets/crew/image-anousheh-ansari.png" alt="Anousheh Ansari">
+    </picture>
+
 
 
   </main>
