--- a/c06/tech.html
+++ b/c06/tech.html
@@ -1,32 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
+
+  <title>Space tourism website</title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <script src="index.js" defer></script>
+  <script src="tabs.js" defer></script>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body class="tech">
 
-  03 Space launch 101
+  <a href="#main" class="skip-to-content">Skip to content</a>
 
-  1
-  2
-  3
+  <header class="primary-header flex">
+    <div>
+      <img src="./starter-code/assets/shared/logo.svg" class="logo" alt="Logo">
+    </div>
+    <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
+    <nav>
+      <ul class="primary-navigation underline-indicators flex" data-visible="false">
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span aria-hidden="true">00</span>Home</a>
+        </li>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span aria-hidden="true">01</span>Destination</a></li>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span aria-hidden="true">02</span>Crew</a></li>
+        <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="tech.html"><span aria-hidden="true">03</span>Technology</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  The terminology...
-  Space capsule
+  <main id="main" class="grid-container grid-container--tech flow">
+    <h1 class="numbered-title"><span aria-hidden="true">03</span>Space launch 101</h1>
 
-  A space capsule is an often-crewed spacecraft that uses a blunt-body reentry 
-  capsule to reenter the Earth's atmosphere without wings. Our capsule is where 
-  you'll spend your time during the flight. It includes a space gym, cinema, 
-  and plenty of other activities to keep you entertained.
+    <div>
+      <ul class="numbered-list flex">
+        <li class="active"><a class="ff-serif fs-600 text-white bg-dark" href="#">1</a></li>
+        <li><a class="ff-serif fs-600 text-white bg-dark" href="#">2</a></li>
+        <li><a class="ff-serif fs-600 text-white bg-dark" href="#">3</a></li>
+      </ul>
+    </div>
+
+    <article class="tech-info flow" role="tabpanel" id="lv-tab">
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">The terminology...</h2>
+        <p class="fs-700 ff-serif uppercase">Launch vehicle</p>
+      </div>
+      <p class="text-accent">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a
+        payload from Earth's surface to space, usually to Earth orbit or beyond. Our
+        WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall,
+        it's quite an awe-inspiring sight on the launch pad!
+      </p>
+    </article>
+
+    <article class="tech-info flow" role="tabpanel" id="spaceport-tab" hidden>
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">The terminology...</h2>
+        <p class="fs-700 ff-serif uppercase">Spaceport
+        </p>
+      </div>
+      <p class="text-accent">
+        A spaceport or cosmodrome is a site for launching (or receiving) spacecraft,
+        by analogy to the seaport for ships or airport for aircraft. Based in the
+        famous Cape Canaveral, our spaceport is ideally situated to take advantage
+        of the Earth’s rotation for launch.
+      </p>
+    </article>
+
+    <article class="tech-info flow" role="tabpanel" id="capsule-tab" hidden>
+      <div class="flow" style="--flow-space:.5rem;">
+        <h2 class="fs-600 ff-serif uppercase">The terminology...</h2>
+        <p class="fs-700 ff-serif uppercase">Space capsule</p>
+      </div>
+      <p class="text-accent">A space capsule is an often-crewed spacecraft that uses a blunt-body reentry
+        capsule to reenter the Earth's atmosphere without wings. Our capsule is where
+        you'll spend your time during the flight. It includes a space gym, cinema,
+        and plenty of other activities to keep you entertained.
+      </p>
+    </article>
+
+
+    <picture id="lv-image">
+      <img src="./starter-code/assets/technology/image-launch-vehicle-portrait.jpg" alt="Commander Douglas Hurley">
+    </picture>
+
+    <picture id="spaceport-image" hidden>
+      <img src="./starter-code/assets/technology/image-spaceport-portrait.jpg" alt="Mark Shuttleworth">
+    </picture>
+
+    <picture id="capsule-image" hidden>
+      <img src="./starter-code/assets/technology/image-space-capsule-portrait.jpg" alt="Victor Glover">
+    </picture>
+
+
+
+  </main>
 </body>
+
 </html>
