--- a/c06/tech.html
+++ b/c06/tech.html
@@ -38,13 +38,21 @@
   <main id="main" class="grid-container grid-container--tech flow">
     <h1 class="numbered-title"><span aria-hidden="true">03</span>Space launch 101</h1>
 
-    <div>
-      <ul class="numbered-list flex">
-        <li class="active"><a class="ff-serif fs-600 text-white bg-dark" href="#">1</a></li>
-        <li><a class="ff-serif fs-600 text-white bg-dark" href="#">2</a></li>
-        <li><a class="ff-serif fs-600 text-white bg-dark" href="#">3</a></li>
-      </ul>
+    <!-- <div> -->
+    <!-- <ul class="numbered-list flex tab-list" role="tablist" aria-label="technology list">
+        <li aria-selected="true" role="tab" tabindex="0" data-image="lv-image" aria-controls="lv-tab" class="active"><a class="ff-serif fs-600 text-white bg-dark" href="#">1</a></li>
+        <li aria-selected="false" role="tab" tabindex="-1" data-image="spaceport-image" aria-controls="spaceport-tab"><a class="ff-serif fs-600 text-white bg-dark" href="#">2</a></li>
+        <li aria-selected="false" role="tab" tabindex="-1" data-image="capsule-image" aria-controls="capsule-tab"><a class="ff-serif fs-600 text-white bg-dark" href="#">3</a></li>
+      </ul> -->
+    <!-- </div> -->
+
+    <!-- temp -->
+    <div class="dot-indicators flex tab-list" role="tablist" aria-label="crew member list">
+      <button aria-selected="true" role="tab" tabindex="0" data-image="lv-image" aria-controls="lv-tab"><span class="sr-only">The commander</span></button>
+      <button aria-selected="false" role="tab" tabindex="-1" data-image="spaceport-image" aria-controls="spaceport-tab"><span class="sr-only">The mission specialist</span></button>
+      <button aria-selected="false" role="tab" tabindex="-1" data-image="capsule-image" aria-controls="capsule-tab"><span class="sr-only">The pilot</span></button>
     </div>
+    <!-- end temp -->
 
     <article class="tech-info flow" role="tabpanel" id="lv-tab">
       <div class="flow" style="--flow-space:.5rem;">
@@ -86,15 +94,15 @@
 
 
     <picture id="lv-image">
-      <img src="./starter-code/assets/technology/image-launch-vehicle-portrait.jpg" alt="Commander Douglas Hurley">
+      <img src="./starter-code/assets/technology/image-launch-vehicle-portrait.jpg" alt="Launch vehicle image">
     </picture>
 
     <picture id="spaceport-image" hidden>
-      <img src="./starter-code/assets/technology/image-spaceport-portrait.jpg" alt="Mark Shuttleworth">
+      <img src="./starter-code/assets/technology/image-spaceport-portrait.jpg" alt="Spaceport image">
     </picture>
 
     <picture id="capsule-image" hidden>
-      <img src="./starter-code/assets/technology/image-space-capsule-portrait.jpg" alt="Victor Glover">
+      <img src="./starter-code/assets/technology/image-space-capsule-portrait.jpg" alt="capsule image">
     </picture>
 
 
